Add dialog for server error and internet connection. Restructure project files

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -1,6 +1,27 @@
 {
+  "button": {
+    "quit": "Beenden",
+    "retry": "Neu laden"
+  },
+  "components": {
+    "basic": {
+      "empty-view": {
+        "title": "Noch keine Beiträge."
+      }
+    }
+  },
   "empty_title": "Keine Beiträge vorhanden.",
   "error_title": "Etwas ist schief gelaufen",
+  "error": {
+    "network": {
+      "title": "Keine Internetverbindung",
+      "message": "Bitte überprüfen Sie Ihre Netzwerkverbindung und versuchen Sie es erneut."
+    },
+    "server": {
+      "title": "Artikel konnten nicht geladen werden",
+      "message": "Entschuldigung, der Server hat ein Problem. Wir arbeiten an einer Lösung."
+    }
+  },
   "load_more": "Mehr laden",
   "end_text": "— Ende —",
   "organizations": {
