Add skeleton loader with shimmer effect for post list

--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -5,7 +5,7 @@
   "end_text": "— Hết —",
   "organizations": {
     "GDPTDQ": "GĐPT Đức Quốc",
-    "VG": "Chùa Viên Giác",
+    "VG": "Tổ Đình Viên Giác",
     "VL": "Tu Viện Viên Lạc",
     "VLTDE": "Tu Viện Vô Lượng Thọ",
     "VLTVI": "Tu Viện Vô Lượng Thọ"
