--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -10,8 +10,6 @@
       }
     }
   },
-  "empty_title": "Chưa có bài viết.",
-  "error_title": "Có lỗi xảy ra",
   "error": {
     "network": {
       "title": "Không có Internet",
@@ -22,8 +20,11 @@
       "message": "Xin lỗi, máy chủ đang gặp sự cố. Chúng tôi đã ghi nhận và đang khắc phục."
     }
   },
-  "load_more": "Tải thêm",
-  "end_text": "— Hết —",
+  "features": {
+    "post-list": {
+      "no-more-posts": "Hết."
+    }
+  },
   "organizations": {
     "GDPTDQ": "GĐPT Đức Quốc",
     "VG": "Tổ Đình Viên Giác",
