Upgrade expo to sdk 54, improve shimmer color and translation

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -26,11 +26,12 @@
     }
   },
   "organizations": {
-    "GDPTDQ": "GĐPT Đức Quốc",
-    "VG": "Pagode Viên Giác",
-    "VL": "Viên Lạc Retreat Center",
-    "VLTDE": "Amitayus Kloster",
-    "VLTVI": "Amitayus Kloster"
+    "GDPTDQ": "Buddh. Jugendverein 🇩🇪",
+    "VG": "Pagode Viên Giác 🇩🇪",
+    "VL": "Viên Lạc Retreat Center 🇩🇪",
+    "VLTDE": "Amitayus Kloster 🇩🇪",
+    "VLTVI": "Amitayus Kloster 🇩🇪",
+    "VM": "Pagode Viên Minh 🇨🇭"
   },
   "time": {
     "seconds": "Sek",
