--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -26,11 +26,12 @@
     }
   },
   "organizations": {
-    "GDPTDQ": "GĐPT Đức Quốc",
-    "VG": "Viên Giác Pagoda",
-    "VL": "Viên Lạc Retreat Center",
-    "VLTDE": "Amitayus Monastery",
-    "VLTVI": "Amitayus Monastery"
+    "GDPTDQ": "Buddhist Youth Assoc. 🇩🇪",
+    "VG": "Viên Giác Pagoda 🇩🇪",
+    "VL": "Viên Lạc Retreat Center 🇩🇪",
+    "VLTDE": "Amitayus Monastery 🇩🇪",
+    "VLTVI": "Amitayus Monastery 🇩🇪",
+    "VM": "Viên Minh Pagoda 🇨🇭"
   },
   "time": {
     "seconds": "sec",
