Add post details page

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -34,6 +34,10 @@
     "VM": "Pagode Viên Minh 🇨🇭"
   },
   "time": {
+    "elapsed": {
+      "short": "{{count}} {{unit}}",
+      "long": "vor {{count}} {{unit}}"
+    },
     "seconds": "Sek",
     "minutes": "Min",
     "hours": "Std",
