--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -27,11 +27,11 @@
   },
   "organizations": {
     "GDPTDQ": "GĐPT Đức Quốc 🇩🇪",
-    "VG": "Tổ Đình Viên Giác 🇩🇪",
-    "VL": "Tu Viện Viên Lạc 🇩🇪",
-    "VLTDE": "Tu Viện Vô Lượng Thọ 🇩🇪",
-    "VLTVI": "Tu Viện Vô Lượng Thọ 🇩🇪",
-    "VM": "Chùa Viên Minh 🇨🇭"
+    "VG": "Viên Giác 🇩🇪",
+    "VL": "Viên Lạc 🇩🇪",
+    "VLTDE": "Vô Lượng Thọ 🇩🇪",
+    "VLTVI": "Vô Lượng Thọ 🇩🇪",
+    "VM": "Viên Minh 🇨🇭"
   },
   "time": {
     "elapsed": {
